# ailearn

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ailearn/: cli.py
src/ailearn/commands/: init.py
src/ailearn/templates/: constitution.md  profile.md
src/ailearn/templates/agents/claude/: CLAUDE.md
src/ailearn/templates/agents/claude/commands/: ailearn.plan.md  ailearn.reflect.md  ailearn.weekrecap.md
src/ailearn/templates/agents/cursor/: .cursorrules
src/ailearn/templates/agents/cursor/commands/: ailearn.clarify.md  ailearn.plan.md  ailearn.weekrecap.md
src/ailearn/templates/agents/cursor/rules/: ailearn.mdc
