[project]
name = "ailearn"
version = "0.1.0"
description = "AI-assisted learning toolkit for junior developers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ailearn = "ailearn.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailearn"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/ailearn/templates" = "ailearn/templates"
